WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90351
IndexedDB custom bindings missing String type
https://bugs.webkit.org/show_bug.cgi?id=90351
Summary
IndexedDB custom bindings missing String type
George Staikos
Reported
2012-07-01 14:22:39 PDT
JSIDBAnyCustom is missing support for String in the switch.
Attachments
Patch to implement String
(1.22 KB, patch)
2012-07-01 14:24 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
Patch to implement String
(1.20 KB, patch)
2012-07-07 19:12 PDT
,
George Staikos
zimmermann
: review+
zimmermann
: commit-queue-
Details
Formatted Diff
Diff
Patch to implement String
(1.27 KB, patch)
2012-07-10 18:55 PDT
,
George Staikos
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
George Staikos
Comment 1
2012-07-01 14:24:16 PDT
Created
attachment 150338
[details]
Patch to implement String
Charles Wei
Comment 2
2012-07-01 19:07:57 PDT
Comment on
attachment 150338
[details]
Patch to implement String LGTM.
Charles Wei
Comment 3
2012-07-01 19:14:13 PDT
Comment on
attachment 150338
[details]
Patch to implement String commit.
WebKit Review Bot
Comment 4
2012-07-01 19:14:52 PDT
Comment on
attachment 150338
[details]
Patch to implement String Rejecting
attachment 150338
[details]
from review queue.
charles.wei@torchmobile.com.cn
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
George Staikos
Comment 5
2012-07-05 18:59:12 PDT
Adding some indexeddb gurus for thoughts on this two-line patch :)
George Staikos
Comment 6
2012-07-07 14:51:21 PDT
Can anyone review this? It's a two line patch.
Nikolas Zimmermann
Comment 7
2012-07-07 15:28:52 PDT
Comment on
attachment 150338
[details]
Patch to implement String Doesn't this need a test? (Or is it untestable at present?)
George Staikos
Comment 8
2012-07-07 15:48:11 PDT
(In reply to
comment #7
)
> (From update of
attachment 150338
[details]
) > Doesn't this need a test? (Or is it untestable at present?)
Not sure. Maybe Charles can comment. I'd hope the tests already are present.
Joshua Bell
Comment 9
2012-07-07 15:49:36 PDT
Is the stringToUstring call necessary? The JSIDBKeyCustom impl doesn't have it. This will be covered by existing IDB key path tests when enabled for a port. IDBAny::StringType was a recent addition and I failed to account for the JSC version when I added it. Looks good from an IDB perspective.
George Staikos
Comment 10
2012-07-07 19:11:19 PDT
(In reply to
comment #9
)
> Is the stringToUstring call necessary? The JSIDBKeyCustom impl doesn't have it. > > This will be covered by existing IDB key path tests when enabled for a port. IDBAny::StringType was a recent addition and I failed to account for the JSC version when I added it. > > Looks good from an IDB perspective.
Seems to be the case. Updating the patch now.
George Staikos
Comment 11
2012-07-07 19:12:03 PDT
Created
attachment 151152
[details]
Patch to implement String
Nikolas Zimmermann
Comment 12
2012-07-08 05:26:18 PDT
Comment on
attachment 151152
[details]
Patch to implement String View in context:
https://bugs.webkit.org/attachment.cgi?id=151152&action=review
rs=me, please modify the ChangeLog before landing:
> Source/WebCore/ChangeLog:7 > +
Joshuas explanation should be added to the ChangeLog. It's missing the "why" answers, as discussed recently on webkit-dev. Just include a line saying that this is covered by existing tests for ports that use JSC and have IndexDB available - at least that's how I understand it.
George Staikos
Comment 13
2012-07-10 18:55:33 PDT
Created
attachment 151574
[details]
Patch to implement String
WebKit Review Bot
Comment 14
2012-07-10 21:45:17 PDT
Comment on
attachment 151574
[details]
Patch to implement String Clearing flags on attachment: 151574 Committed
r122295
: <
http://trac.webkit.org/changeset/122295
>
WebKit Review Bot
Comment 15
2012-07-10 21:45:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug