Add missing binding type String for IndexedDB. https://bugs.webkit.org/show_bug.cgi?id=90351

Reviewed by Nikolas Zimmermann.

No new tests because it's already covered by IDB tests.

* bindings/js/JSIDBAnyCustom.cpp:
(WebCore::toJS):


git-svn-id: svn://svn.chromium.org/blink/trunk@122295 bbb929c8-8fbe-4397-9dbb-9b2b20218538